[FIX] chat z-index

--- a/styles/lesson/LessonDetail.module.scss
+++ b/styles/lesson/LessonDetail.module.scss
@@ -197,7 +197,7 @@ $chat--width: 400px;
     flex-direction: column;
     width: $chat--width;
     height: 100vh;
-    z-index: 6;
+    z-index: 100;
     overflow: hidden;
 
     // touch-action: none;
